k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dhbw-viber
  labels:
    app.kubernetes.io/name: dhbw-viber
